2007-09-18  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed Bug 325438 - New doc completion
	  slowing me down.

2007-09-15  Jérémie Laval <jeremie.laval@gmail.com>

	* Parser/Parser.cs: Added support for parsing error retrieval from NRefactory.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs, Gui/CSharpTextEditorExtension.cs,
	  CSharpAmbience.cs: Make proper use of ITypeNameResolver everywhere to
	  resolve type names of parameters, methods, etc. Fixes bug #82854.
	* Parser/TypeNameResolver.cs: Fix name resolution for aliases.

2007-09-14  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs (PushColon): Handle the
	:: operator. Fixes bug #82316.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Minor fix.
	* Parser/TypeNameResolver.cs: Remove debug code.

2007-09-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs,
	  Parser/TypeNameResolver.cs: Implement support for ITypeResolver. Add
	  parameter completion support for delegate invocations. Fixes bug #82264
	  and #82238.
	* CSharpBinding.mdp: Fix warning level. Added new file.
	* CSharpAmbience.cs: Track API changes.
	* Makefile.am: Updated.

2007-09-14  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed 82425:Renaming a base method doesn't rename
	  overrides. (Fixed for properties too).

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpParameterDataProvider.cs: Improved method formatting.
	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: When resolving a
	  type, take into account parameter types for methods and classes. Fixes
	  bug #82209.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpAmbience.cs: The name of a delegate is the name of the class, not
	  the return type of the invoke method. Don't show the delegate parameters